--- a/index.html
+++ b/index.html
@@ -11,16 +11,41 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-light bg-light">
+  <header>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+
+        <a class="navbar-brand" href="#">Portafolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav text-right">
+            <li class="nav-item">
+              <a href="" class="nav-link">Link 1</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Link 2</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Link 3</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Link 4</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+  </header>
+
+  <div class="jumbotron">
     <div class="container">
-
-      <a class="navbar-brand" href="#">Portafolio</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
+      <h3>Portafolio</h3>
     </div>
-  </nav>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
