--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="text-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
 
